src/main/resources/de/plushnikov/intellij/plugin/language/lombokConfig.bnf
{
  parserClass="de.plushnikov.intellij.plugin.language.parser.LombokConfigParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="LombokConfig"
  psiImplClassSuffix="Impl"
  psiPackage="de.plushnikov.intellij.plugin.language.spi"
  psiImplPackage="de.plushnikov.intellij.plugin.language.spi.impl"

  elementTypeHolderClass="de.plushnikov.intellij.plugin.language.spi.LombokConfigTypes"
  elementTypeClass="de.plushnikov.intellij.plugin.language.spi.LombokConfigElementType"
  tokenTypeClass="de.plushnikov.intellij.plugin.language.spi.LombokConfigTokenType"

  psiImplUtilClass="de.plushnikov.intellij.plugin.language.spi.LombokConfigPsiUtil"
}

simpleFile ::= item_*

private item_ ::= (property|cleaner|COMMENT|CRLF)

property ::= (KEY operation VALUE) {methods=[getKey getValue]}
operation ::= SIGN? SEPARATOR
cleaner ::= (CLEAR KEY) {methods=[getKey]}
